<resources>
	<string name="umeng_example_fb_home_btn_simple">Simple Demo</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">载入更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="search">搜索</string>
    <string name="navi_tip">本功能为调起百度地图Android客户端（V5.0及以上版本）的导航功能，用户必须已安装百度地图客户端，如果没有安装则提示用户下载安装百度地图客户端。</string>
    <string name="app_name">高丽营镇综合服务平台</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="event_manager">事件管理</string>
    <string name="essential_manager">基本信息</string>
    <string name="main_title">高丽营镇综合服务平台</string>
    <string name="welcome">掌上高丽营欢迎您!</string>
    <string name="tijiao">提交日期</string>
    <string name="submission_time">提交日期</string>
    <string name="completion_time">完成日期</string>
    <string name="examination_time">检查日期</string>
    <string name="examination_content">检查内容</string>
    <string name="enterprise_name">企业名称</string>
    <string name="legal_person">责任人</string>
    <string name="address">地址</string>
    <string name="hygiene_licence">卫生许可证</string>
    <string name="emdical_certificate">从业人员健康证</string>
    <string name="operations_beyond_cold_meat">超范围经营冷荤凉菜</string>
    <string name="environmental_health">操作间环境卫生</string>
    <string name="commit">提交</string>
    <string name="cancel">返回</string>
    <string name="hint_time">时间</string>
    <string name="business_licence">营业执照</string>
    <string name="add_event">请点击此处新增事件</string>
    <string name="food_drug_examination">食品、药品安全隐患</string>
    <string name="food_drug_examination_sub_title">餐饮企业卫生许可证、从业人员健康证等信息的提交</string>
    <string name="restaurant_examination">餐饮检查</string>
    <string name="restaurant_examination_sub_title">餐饮企业卫生许可证、从业人员健康证等信息的提交</string>
    <string name="jianchadate">检查日期</string>
    <string name="healthcertificate">从业人员是否有健康证</string>
    <string name="outofbusiness">是否超范围经营冷荤凉菜</string>
    <string name="handlingroomclean">操作间环境是否干净整洁</string>
    <string name="sanitation_examination">环境、垃圾隐患</string>
    <string name="sanitation_examination_sub_title">生活垃圾或建筑垃圾堆放位置等信息的提交</string>
    <string name="trash_weight">垃圾数量（吨）</string>
    <string name="trash_category">垃圾种类</string>
    <string name="traffic_examination">交通安全隐患</string>
    <string name="traffic_examination_sub_title">无照驾驶、无牌上路、超载超限等隐患信息的提交</string>
    <string name="traffic_safe">交通安全</string>
    <string name="traffic_safe_unlicensed_driving">无照驾驶</string>
    <string name="traffic_safe_unlicensed_car">无牌上路</string>
    <string name="traffic_safe_overload">超载超限</string>
    <string name="traffic_picture">照片</string>
    <string name="additional_content">附加信息</string>
    <string name="village">村庄</string>
    <string name="district_code">网格名称</string>
    <string name="district_administrator">格长姓名</string>
    <string name="danger_code">隐患标号</string>
    <string name="danger_level">隐患级别</string>
    <string name="status">状态</string>
    <string name="status_unsolved">未解决</string>
    <string name="status_solving">解决中</string>
    <string name="status_solved">已解决</string>
    <string name="solution_process">解决过程记录</string>
    <string name="cause">未解决原因</string>
    <string name="criminal_examination">刑事案件发案</string>
    <string name="criminal_examination_sub_title">侵犯人身、财产、危害社会等刑事案件的提交</string>
    <string name="criminal_category">刑事案件类型</string>
    <string name="infringement_personal">侵犯人身</string>
    <string name="property_violation">侵犯财产</string>
    <string name="economic_crime">经济犯罪</string>
    <string name="public_security">公共安全</string>
    <string name="duty_crime">职务犯罪</string>
    <string name="endanger_society">危害社会</string>
    <string name="dispute_examination">矛盾纠纷排查</string>
    <string name="dispute_examination_sub_title">邻里纠纷、婚姻家庭纠纷等事件信息的提交</string>
    <string name="dispute_category">纠纷类型</string>
    <string name="dispute_category_neighborhood">邻里纠纷</string>
    <string name="dispute_category_family">婚姻家庭纠纷</string>
    <string name="dispute_category_indemnity">损害赔偿纠纷</string>
    <string name="dispute_category_house">房屋宅基地纠纷</string>
    <string name="dispute_category_village_affair">村务管理纠纷</string>
    <string name="dispute_category_other">其它纠纷</string>
    <string name="dispute_personal">纠纷人</string>
    <string name="dispute_result">处理结果</string>
    <string name="unlicensed_vendor_examination">无照经营</string>
    <string name="unlicensed_vendor_examination_sub_title">无照经营者姓名，经营场所信息的提交</string>
    <string name="proprietor">经营者姓名</string>
    <string name="lessor">房东姓名</string>
    <string name="business_scope">经营项目</string>
    <string name="note">备注</string>
    <string name="picture">照片</string>
    <string name="snapshot">现场拍照</string>
    <string name="videotape">现场拍摄</string>
    <string name="select_picture">选择照片</string>
    <string name="select_video">选择视频</string>
    <string name="video_file">无视频</string>
    <string name="illegal_structure_examination">违章建筑</string>
    <string name="illegal_structure_examination_sub_title">违章建筑位置、建筑面积等信息的提交</string>
    <string name="illegal_structure_address">违章建筑具体位置</string>
    <string name="illegal_structure_landlord">违法建设人</string>
    <string name="landlord">违法建设人</string>
    <string name="landstatus">土地性质</string>
    <string name="landarea">占地面积(亩)</string>
    <string name="construction">建筑结构</string>
    <string name="jianzhumianji">建筑面积</string>
    <string name="buildtime">建设日期</string>
    <string name="circumstance_category">当日情况</string>
    <string name="circumstance_category_newfound">新发现</string>
    <string name="circumstance_category_dismantlement">拆除</string>
    <string name="circumstance_category_outher">其它</string>
    <string name="login_reset">重置</string>
    <string name="login_commit">提交</string>
    <string name="login">登录</string>
    <string name="save_login">记住用户名</string>
    <string name="auto_login">自动登录</string>
    <string name="login_main">系统登录</string>
    <string name="user_name">用户名</string>
    <string name="user_mobile">手机号</string>
    <string name="password">密　码</string>
    <string name="login_tips">\n\n\n登录提示: 默认密码123456. \n 您选输入错误密码看看效果,   \n 更多信息请致电: <b>13901234567.</b>  \n还有问题还要学会搜索:  http://www.google.com  \n 版权所有:  XXX </string>
    <string name="browse_category">分类浏览</string>
    <string name="new_category">新的事件</string>
    <string name="select_browse_order">排序</string>
    <string name="select_browse_order_time_forward">正序▲</string>
    <string name="select_browse_order_time_reversed">倒序▼</string>
    <string name="select_browse_category">分类浏览</string>
    <string name="select_browse_today">今日</string>
    <string name="select_browse_week">本周</string>
    <string name="select_browse_month">本月</string>
    <string name="select_browse_season">本季</string>
    <string name="select_browse_year">本年</string>
    <string name="select_browse_all">全部</string>
    <string name="statistics_category">统计类别</string>
    <string name="check_upgrade">检查升级</string>
    <string name="cancel_auto_login">取消自动登录</string>
    <string name="map_navigation">违章建筑地图信息</string>
    <string name="baidu_navigation">导航</string>
    <string name="show_event_step">每页显示案件数</string>
    <string name="feedback">用户反馈</string>
     <string name="shengchang_title">生产安全</string>
     <string name="shengchang_sub_title">生产安全相关</string>
     <string name="xiaofang_title">消防安全</string>
     <string name="xiaofang_sub_title">消防安全相关</string>
     <string name="meiqizhongdu_title">煤气中毒</string>
     <string name="meiqizhongdu_sub_title">煤气中毒相关</string>
     <string name="huanjing_title">环境安全</string>
     <string name="huanjing_sub_title">环境安全相关</string>
     <string name="shipin_title">食品安全</string>
     <string name="shipin_sub_title">食品安全相关</string>
     <string name="yaopin_title">药品安全</string>
     <string name="yaopin_sub_title">药品安全相关</string>
     <string name="weishengsuo_title">卫生所检查</string>
     <string name="weishengsuo_sub_title">卫生所检查</string>
     <string name="wuzhaojingying_title">无照经营</string>
     <string name="wuzhaojingying_sub_title">无照经营</string>
     <string name="maodunpaicha_title">矛盾排查</string>
     <string name="maodunpaicha_sub_title">矛盾排查</string>
     <string name="xingshianjian_title">刑事案件</string>
     <string name="xingshianjian_sub_title">刑事案件</string>
     <string name="jiaotong_title">交通安全</string>
     <string name="jiaotong_sub_title">交通安全相关</string>
    <string name="netid">网格ID</string>
    <string name="netname">格名称</string>
    <string name="villageid">村ID</string>
    <string name="villagename">村名称</string>
    <string name="eventtype">事件类型</string>
    <string name="eventid">事件编号</string>
    <string name="discoverername">提交人</string>
    <string name="discovererlevel">提交人级别</string>
    <string name="leaderid">批示人ID</string>
    <string name="leadername">批示人姓名</string>
    <string name="belong_village">所属村</string>
    <string name="belong_netgrid">所属格</string>
    <string name="weijinaddress">违建位置</string>
    <string name="weijianxiangduiren">违建相对人</string>
    <string name="weizhangmiaoshu">违章描述</string>
    <string name="yinhuanxiangqing">隐患描述</string>
    <string name="yinhuanaddress">隐患地点</string>
    <string name="yinhuandanwei">隐患所在单位</string>
    <string name="yinhuandanweiren">隐患单位负责人</string>
    <string name="yinhuandanweitel">隐患单位电话</string>
    <string name="yinhuandanweitype">隐患单位类型</string>
    <string name="yinhuanren">涉及人姓名</string>
    <string name="yinhuanlianluo">涉及人电话</string>
    <string name="updateid">更新人id</string>
    <string name="updatename">最近更新人</string>
    <string name="updatelevel">更新人级别</string>
    <string name="updatetime">最近更新日期</string>
    <string name="solvestatus">解决状态</string>
    <string name="duedate">预期解决日期</string>
    <string name="solvedate">实际解决日期</string>
    <string name="unsolvedreason">未解决原因</string>
    <string name="solvemethod">当日新发现和拆除情况</string>
    <string name="result">解决结果</string>
    <string name="village_basic_information_title">村信息</string>
    <string name="village_basic_information_sub_title">按村信息查看</string>
    <string name="nethushu">常驻户数</string>
    <string name="netrenkou">常驻人口</string>
    <string name="liudongzong">流动人口总数</string>
    <string name="youzanzhu">已办暂住证</string>
    <string name="wuzanzhuzong">未办暂住证总数</string>
    <string name="wuzanzhu16shang">未办暂住证，16周岁以上</string>
    <string name="wuzanzhu16xia">未办暂住证，16周岁以下</string>
    <string name="liudongbusiness">流动人口个体经商户数</string>
    <string name="liudongwork">流动人口从业人员数</string>
    <string name="liudongemployee">招用流动人口数</string>
    <string name="chuzuhuzong">出租房屋总户数</string>
    <string name="chuzujianzong">出租房屋总间数</string>
    <string name="chuzuyuanzong">出租大院户数</string>
    <string name="zuzhurenshu">租住人员数</string>
    <string name="chuzuyiranyibao">利用出租屋存放易燃易爆危险化学品</string>
    <string name="chuzuwuzhao">利用出租房屋无照经营</string>
    <string name="chuzufeifabanxue">利用出租房屋非法办学</string>
    <string name="chuzufeipinshougou">利用出租房屋收购废品</string>
    <string name="chuzuqunzu">利用出租房屋群租</string>
    <string name="wuye">无业人员数</string>
    <string name="yuling">育龄妇女数</string>
    <string name="qiyeshu">企业数</string>
    <string name="mendianshu">门店数</string>
    <string name="feipinzhan">废品收购站数</string>
    <string name="youyuanpeixun">幼儿园或培训机构数</string>
    <string name="wuzhaojingying">是否无照经营生产经营</string>
    <string name="dianxianluanjie">电线是否私拉乱接</string>
    <string name="chejianzangluan">车间是否脏乱</string>
    <string name="jiqiposun">机器设备是否破损</string>
    <string name="dianzaxiang">电闸箱前是否堆放</string>
    <string name="huaxuepin">是否存放、使用危险化学品</string>
</resources>