<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        style="@style/mainTitle"
        android:text="@string/traffic_examination" />

    <TextView
        style="@style/subTitle"
        android:text="@string/traffic_examination_sub_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            
            android:orientation="vertical"
            >

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/traffic_safe" />

                <CheckBox
                    android:id="@+id/cb_traffic_safe_unlicensed_driving"
                    android:text="@string/traffic_safe_unlicensed_driving" />

                <CheckBox
                    android:id="@+id/cb_traffic_safe_unlicensed_car"
                    android:text="@string/traffic_safe_unlicensed_car" />

                <CheckBox
                    android:id="@+id/cb_traffic_safe_overload"
                    android:text="@string/traffic_safe_overload" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/traffic_picture" />

                <EditText
                    android:id="@+id/_traffic_picture"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/legal_person" />

                <EditText
                    android:id="@+id/et_legal_person"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/et_address"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/tijiao" />

                <EditText
                    android:id="@+id/discovery_date_time"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/submission_time" />

                <EditText
                    android:id="@+id/submission_date_time"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/additional_content" />

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/village" />

                <EditText
                    android:id="@+id/village"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/district_code" />

                <EditText
                    android:id="@+id/district_code"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/district_administrator" />

                <EditText
                    android:id="@+id/district_administrator"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/danger_code" />

                <EditText
                    android:id="@+id/danger_code"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/danger_level" />

                <EditText
                    android:id="@+id/danger_level"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/status" />

                <RadioGroup
                    android:id="@+id/radiogroup_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/rb_status_unsolved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/status_unsolved" />

                    <RadioButton
                        android:id="@+id/rb_status_solving"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_solving" />

                    <RadioButton
                        android:id="@+id/rb_status_solved"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status_solved" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/solution_process" />

                <EditText
                    android:id="@+id/solution_process"
                    android:ems="10" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/completion_time" />

                <EditText
                    android:id="@+id/completion_date_time"
                    android:ems="10" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_weight="0"
        android:text="@string/commit" />

</LinearLayout>