<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        
        android:orientation="vertical"
         >

        <TextView
         style="@style/mainTitle"
            android:text="@string/restaurant_examination"
             />

        <TextView
            style="@style/subTitle"
            android:text="@string/restaurant_examination_sub_title"
            />

        <LinearLayout style="@style/horizontalCenter" >

            <TextView
                style="@style/thirdTitle"
                
                android:text="@string/examination_time" />

            <EditText
                android:id="@+id/examination_date_time"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalCenter" >

            <TextView
                style="@style/thirdTitle"
                
                android:text="@string/enterprise_name" />

            <EditText
                android:id="@+id/et_enterprise_name"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalCenter" >

            <TextView
                style="@style/thirdTitle"
                
                android:text="@string/legal_person" />

            <EditText
                android:id="@+id/et_legal_person"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalCenter" >

            <TextView
                style="@style/thirdTitle"
                
                android:text="@string/address" />

            <EditText
                android:id="@+id/et_address"
                android:ems="10" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalCenter" >

            <TextView
                style="@style/thirdTitle"
                
                android:text="@string/examination_content" />

            <CheckBox
                android:id="@+id/cb_hygiene_licence"
                
                android:ems="10"
                android:text="@string/hygiene_licence" />

            <CheckBox
                android:id="@+id/cb_emdical_certificate"
                
                android:ems="10"
                android:text="@string/emdical_certificate" />

            <CheckBox
                android:id="@+id/cb_operations_beyond_cold_meat"
                
                android:ems="10"
                android:text="@string/operations_beyond_cold_meat" />

            <CheckBox
                android:id="@+id/cb_environmental_health"
                
                android:ems="10"
                android:text="@string/environmental_health" />
        </LinearLayout>

        <LinearLayout style="@style/horizontalCenter" >

            <Button
                
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:text="@string/commit" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>