<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        style="@style/mainTitle"
        android:text="@string/unlicensed_vendor_examination" />

    <TextView
        style="@style/subTitle"
        android:text="@string/unlicensed_vendor_examination_sub_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            >

            <TextView
                style="@style/thirdTitle"
                android:text="@string/examination_time" />

            <EditText
                android:id="@+id/examination_date_time"
                android:ems="10"
                android:hint="@string/hint_time" />

            <TextView
                style="@style/thirdTitle"
                android:text="@string/proprietor" />

            <EditText
                android:id="@+id/et_proprietor"
                android:ems="10"
                android:hint="@string/proprietor" />

            <TextView
                style="@style/thirdTitle"
                android:text="@string/address" />

            <EditText
                android:id="@+id/et_address"
                android:ems="10"
                android:hint="@string/address" />

            <TextView
                style="@style/thirdTitle"
                android:text="@string/lessor" />

            <EditText
                android:id="@+id/et_lessor"
                android:ems="10"
                android:hint="@string/lessor" />

            <TextView
                style="@style/thirdTitle"
                android:text="@string/business_scope" />

            <EditText
                android:id="@+id/et_business_scope"
                android:ems="10"
                android:hint="@string/business_scope" />

            <TextView
                style="@style/thirdTitle"
                android:text="@string/note" />

            <EditText
                android:id="@+id/et_note"
                android:ems="10"
                android:hint="@string/note" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_weight="0" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:text="@string/commit" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>