<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <TextView
        android:id="@+id/id_title"
        style="@style/mainTitle"
        android:text="@string/dispute_examination" />

    <TextView
        android:id="@+id/id_sub_title"
        style="@style/subTitle"
        android:text="@string/dispute_examination_sub_title" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/examination_time" />

                <EditText
                    android:id="@+id/examination_date_time"
                    android:ems="10"
                    android:hint="@string/hint_time" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/dispute_personal" />

                <EditText
                    android:id="@+id/et_dispute_personal"
                    android:ems="10"
                    android:hint="@string/dispute_personal" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/legal_person" />

                <EditText
                    android:id="@+id/et_legal_person"
                    android:ems="10"
                    android:hint="@string/legal_person" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/et_address"
                    android:ems="10"
                    android:hint="@string/address" />
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/dispute_category" />

                <RadioGroup
                    android:id="@+id/radiogroup_dispute_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/rb_dispute_category_neighborhood"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/dispute_category_neighborhood" />

                    <RadioButton
                        android:id="@+id/rb_dispute_category_family"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dispute_category_family" />

                    <RadioButton
                        android:id="@+id/rb_dispute_category_indemnity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dispute_category_indemnity" />

                    <RadioButton
                        android:id="@+id/rb_dispute_category_house"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dispute_category_house" />

                    <RadioButton
                        android:id="@+id/rb_dispute_category_village_affair"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dispute_category_village_affair" />

                    <RadioButton
                        android:id="@+id/rb_dispute_category_other"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dispute_category_other" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout style="@style/horizontalCenter" >

                <TextView
                    style="@style/thirdTitle"
                    android:text="@string/dispute_result" />

                <EditText
                    android:id="@+id/et_dispute_result"
                    android:ems="10"
                    android:hint="@string/dispute_result" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="20dp"
        android:layout_weight="0" >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="20dp"
            android:layout_weight="0"
            android:text="@string/commit" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>